--- a/src/App.scss
+++ b/src/App.scss
@@ -9,3 +9,28 @@
     background: rgba(255,255,255,.2);
     margin: 16px;
 }
+
+.login-form {
+    max-width: 300px;
+}
+
+.login-form-forgot {
+    float: right;
+}
+
+.login-form-button {
+    width: 100%;
+}
+
+.container-login-form{
+    margin: auto;
+    width: 300px;
+}
+
+.title-login{
+    margin-bottom: 100px;
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    padding-top: 50px;
+}
