--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,17 @@
     margin: auto;
     width: 300px;
 }
-
+.title-config{
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: underline;
+}
+.error-config{
+    text-align: center;
+    margin-top: 1rem;
+}
 .title-login{
     margin-bottom: 100px;
     text-align: center;
