--- a/src/App.scss
+++ b/src/App.scss
@@ -113,3 +113,8 @@
     height: 100%;
     width: 100%;
 }
+.simulator-fullscreen-bg{
+    height: 100vh;
+    width: 100%;
+    background: #FFFFFF
+}
