--- a/src/App.scss
+++ b/src/App.scss
@@ -109,12 +109,54 @@
     }
 }
 
-.mapa{
-    height: 100%;
-    width: 100%;
-}
 .simulator-fullscreen-bg{
     height: 100vh;
     width: 100%;
     background: #FFFFFF
 }
+
+.demo0 {
+  border-radius: 4px;
+  background-color: rgb(240, 240, 232);
+  position: relative;
+  margin: 5px 3px 10px;
+  width: 450px;
+  height: 20px;
+}
+
+.wrapper{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+  }
+  
+  .animations-div, .map-div{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+  }
+
+  .mapa{
+    width: 100%;
+    height: 100vh;
+  }
+
+
+  .flight-container {
+    margin: 100px;
+  }
+  
+  .container {
+    position: relative;
+  }
+   
+  .flight {
+      position: absolute;
+    height: 18px;
+    width: 18px;
+    background-image: url('./components/plane.png');
+    background-position:center;
+    background-repeat:no-repeat;
+    background-size:cover;
+  }
+  
